Fix Terms, Privacy header fonts, alignment

--- a/app/src/components/Footer/Footer.css
+++ b/app/src/components/Footer/Footer.css
@@ -81,32 +81,6 @@
 
 }
 
-
-/* .legal-navbar {
-    background-color: #333333;
-}
-
-.legal-nav {
-    margin: auto;
-    width: 60%;
-    padding: 1% 15%;
-}
-.legal-nav li {
-    display: inline;
-    padding: 12.5%;
-    margin: auto;
-}
-
-.legal-nav li a {
-    text-align: center;
-    color: white;
-    display: inline-block;
-    padding: 1%;
-} */
-
-.test-red {
-    background-color: red;
-}
 .legal-navbar {
     background-color: #333333;
 }
@@ -126,6 +100,8 @@
     color: white;
     display: inline-block;
     padding: 2%;
+    font-family: 'BrandonText-bold';
+    font-weight: bolder;
 }
 
 #terms {
